fix overlay z-index

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -113,7 +113,7 @@ h2 {
   min-width: 110%;
   left: -50px;
   bottom: -230px;
-  z-index: 500;
+  z-index: 100;
 }
 #curve > img {
   background-size: cover;
